--- a/wiki/index.html
+++ b/wiki/index.html
@@ -7,6 +7,7 @@
     <title>DownGD - Wiki & Documentation</title>
 
     <script>navigator.serviceWorker.register("src/sw.js")</script>
+    <link rel="stylesheet" type="text/css" href="/src/style.css">
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="/src/icon.png">
 </head>
